# lisaloop-sdk

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
characters/: apu.json  duffman.json  lisa.json  maniac.json  shark.json
lisaloop/: __init__.py  cli.py
lisaloop/agents/: __init__.py  base.py  configurable.py  gto_agent.py  lag_agent.py  lisa_agent.py  random_agent.py  tag_agent.py
lisaloop/analysis/: stats.py
lisaloop/arena/: engine.py
lisaloop/config/: __init__.py  character.py
lisaloop/core/: cards.py  state.py  table.py
lisaloop/environments/: __init__.py  base.py  headsup.py  holdem.py
lisaloop/equity/: __init__.py  calculator.py  ranges.py
lisaloop/events/: __init__.py  bus.py
lisaloop/examples/: equity_demo.py  my_first_agent.py  plugin_example.py  quickstart.py  replay_demo.py  runtime_demo.py  strategy_demo.py  training_demo.py
lisaloop/memory/: __init__.py  opponent_db.py  store.py
lisaloop/plugins/: __init__.py  base.py  loader.py  registry.py
lisaloop/providers/: __init__.py  base.py  equity_provider.py  stats_provider.py
lisaloop/replay/: __init__.py  viewer.py
lisaloop/runtime/: __init__.py  core.py
lisaloop/strategy/: __init__.py  icm.py  position.py  sizing.py
lisaloop/training/: __init__.py  self_play.py
tests/: test_arena.py  test_cards.py
